<resources>
    <!-- Titles -->
    <string name="app_name">Deep Conversations</string>
    <string name="title_activity_navigation">Deep Conversations</string>
    <string name="title_activity_comments">Group Name</string>
    <string name="title_activity_archives">Archives</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Static Texts -->
    <string name="hint_comment">What are your thoughts?</string>
    <string name="friendship_status_request_received">wants to converse with you</string>
    <string name="friendship_status_request_sent">request sent, awaiting reply</string>
    <string name="friendship_status_request_denied">declined your request</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_people">Right People</string>
    <string name="menu_add_person">Add Friend</string>
    <string name="menu_create_group">Create Group</string>
    <string name="menu_invite">Send Invitations</string>
    <string name="menu_archive">Archives</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; Feedback</string>

    <!-- Firebase Preferences -->
    <string name="action_sign_in">Sign in with Google</string>
    <string name="user_id_field">User Id field</string>
    <string name="user_display_name_field">User Display Name</string>
    <string name="user_email">User Email</string>
    <string name="invitation_title">invitation title here</string>
    <string name="invitation_message">message here</string>

    <!-- Font Styles-->
    <string name="fontStyleHeadline">sans-serif</string>
    <string name="fontStyleTitle">sans-serif-medium</string>
    <string name="fontStyleSubheading">sans-serif-medium</string>
    <string name="fontStyleCaption">sans-serif</string>
    <string name="fontStyleBody1">sans-serif</string>
    <string name="fontStyleBody2">sans-serif-medium</string>
    <string name="fontStyleBody3">sans-serif</string>

    <string name="large_text">
        "Material is the metaphor."
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics."
    </string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
</resources>
