<menu xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="@string/menu_people">
    <menu>
        <group
            android:id="@+id/people"
            android:checkableBehavior="single">

            <item
                android:id="@+id/navAddFriend"
                android:icon="@mipmap/ic_friend"
                android:title="@string/menu_add_person" />

            <item
                android:id="@+id/navCreateGroup"
                android:icon="@mipmap/ic_group"
                android:title="@string/menu_create_group" />

            <item
                android:id="@+id/navInvite"
                android:icon="@mipmap/ic_invite"
                android:title="@string/menu_invite" />
        </group>
    </menu>
</item>

<group
    android:id="@+id/settings"
    android:checkableBehavior="single">

    <item
        android:id="@+id/navArchives"
        android:icon="@mipmap/ic_archive"
        android:title="@string/menu_archive" />

    <item
        android:id="@+id/navSettings"
        android:icon="@mipmap/ic_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/navHelp"
        android:icon="@mipmap/ic_help"
        android:title="@string/menu_help" />
</group>

</menu>